# floating-pointer

./: .gitignore  .jshintrc  Cargo.toml  README.md  format-all.sh  monitor-websocket.py  prettier.json  test-websocket.py
src/: main.rs
web/: buttons.js  conf.html  cors.js  draw.js  index.html  log.js  main.js  mouse.css  mouse.js  move.js  scroll.js  scroll_new.js  settings.js  snow.js  touch.js  util.js  ws.js
web/lib/: vh-check.min.js
