[package]
name = "remote-mouse"
version = "0.1.0"
authors = ["Roger Dahl <git@dahlsys.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
float_extras = "0.1.6"
clap = "2"
itertools = "*"
async-std = "1.6.3"
enigo = "0.0.14"
futures = "*"
local_ipaddress = "0.1.3"
public-ip = "0.1.1"
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.4"
resource = "~0.4.0"
colored = "2"
