[package]
name = "remote-mouse"
version = "0.1.0"
authors = ["Roger Dahl <git@dahlsys.com>"]
edition = "2018"

[dependencies]
apt-rs = "0.2.1"
async-std = "1.6.3"
clap = "2"
colored = "2"
enigo = "0.0.14"
float_extras = "0.1.6"
futures = "*"
itertools = "*"
lazy_static = "1.4.0"
local_ipaddress = "0.1.3"
public-ip = "0.1.1"
resource = "~0.4.0"
tokio = { version = "0.2.22", features = ["full"] }
warp = "0.2.4"
